# sycamore-netlify-functions

./: .gitignore  .gitpod.Dockerfile  Cargo.toml  Makefile  README.md  netlify.toml  package-lock.json  package.json
public/: _redirects  index.html
src/: main.rs
