[package]
name = "hello-rs"
version = "0.1.0"
authors = ["David Calavera <david.calavera@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "1.1"
netlify_lambda_http = "0.2"
tokio = { version = "1.0.1", features = ["macros"] }
