[package]
name = "sycamore-netlify-functions"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlify_lambda_http = "0.2.0"
rocket = "0.5.0-rc.1"
tokio = { version = "1.11.0", features = ["macros"] }
cfg-if = "1.0.0"

[features]
lambda = []
